--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0"
+    "php": "~5.5.0|~5.6.0",
 	"oiatsiuk/apple-1": "*"
   },
   "extra": {
